--- a/src/app/components/result/result.component.html
+++ b/src/app/components/result/result.component.html
@@ -1,1 +1,14 @@
-<p>result works!</p>
+<div class="bg-slate-to-royal-blue text-center p-8 rounded-xl">
+    <p class="text-light-lavender text-lg font-18px font-bold mb-2">Your Result</p>
+
+    <div class="circle flex flex-col mx-6 rounded-full justify-center items-center aspect-square">
+      <h1 class="text-white mb-1 font-bold text-6xl">76</h1>
+      <p class="text-light-lavender">of 100</p>
+    </div>
+    
+    <h2 class="text-white text-xl font-bold mt-2 mb-2">Great</h2>
+    <p class="text-light-lavender">
+      You scored higher than 65% of the people who have taken these tests.
+    </p>
+</div>
+
