making component responsive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-results-summary class="flex flex-row m-auto rounded-xl shadow-light-lavender"></app-results-summary>
+<app-results-summary class="flex flex-col sm:flex-row m-auto rounded-xl shadow-light-lavender"></app-results-summary>
 <app-footer></app-footer>
