--- a/src/app/components/result/result.component.html
+++ b/src/app/components/result/result.component.html
@@ -1,4 +1,4 @@
-<div class="bg-slate-to-royal-blue text-center p-8 rounded-xl">
+<div class="bg-slate-to-royal-blue text-center p-8 rounded-xl h-full">
     <p class="text-light-lavender text-lg font-18px font-bold mb-2">Your Result</p>
 
     <div class="circle flex flex-col mx-6 rounded-full justify-center items-center aspect-square">
